--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 /* start navbar */
 .home{
     height: 800px;
-    background-image : url("./images/hero\ img.jpg") ;
+    background-image : url("../images/hero\ img.jpg") ;
     background-size :cover ;
     height: 100vh;
     background-position: center;
@@ -461,6 +461,7 @@ border: none;
   background-color: #333;
   text-align: center;
   padding: 60px;
+padding-top :30px;
 }
 
 .footer p{
